<resources>
    <string name="app_name">ATM Consultoria</string>
    <string name="empresa_detalhes">Sobre a empresa</string>
    <string name="loreipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut lacinia turpis tellus. Fusce at mattis tellus. Nam vitae sapien magna. Nulla ullamcorper lorem et mi imperdiet feugiat. Mauris enim lacus, rutrum vitae sapien ut, iaculis rutrum risus. Phasellus eget nisl vitae nulla lacinia dictum. Phasellus semper elit non convallis aliquet. Cras eu volutpat mauris. Proin finibus congue metus, nec tristique justo fringilla et. Mauris augue odio, malesuada ut vestibulum a, laoreet a diam. Proin venenatis urna sed consequat varius. Vestibulum vitae libero vel quam aliquet viverra vitae a quam. Nunc convallis at nisl at dapibus. Curabitur dignissim tellus id velit lobortis, eu porta metus lobortis. Etiam sit amet enim condimentum, lobortis nisi nec, pellentesque ligula.</string>
    <string name="servico_detalhes">Serviços</string>
    <string name="texto_consultoria">Consultoria</string>
    <string name="text_processos">Processos</string>
    <string name="texto_acompanhamento_projeto">Acompanhamento e projetos</string>
    <string name="nossos_clientes">Nossos Clientes</string>
    <string name="contato_detalhes">Contato</string>
    <string name="email">E-mail: consultoria@atm.com.br</string>
    <string name="telefone">Telefone: (11) 3333-2222</string>
    <string name="celular">Celular: (11) 99999-8888</string>
</resources>
